Scrollbar Fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,3 @@
-body::-webkit-scrollbar {
-  background-color: rgb(228, 208, 247);
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: #c58be7;
-  border-radius: 5px;
-}
-
 @font-face {
   font-family: 'Google Sans';
   src: url('../fonts/GoogleSans-BoldItalic.woff2') format('woff2'),
@@ -139,6 +130,15 @@ body {
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
+}
+
+body::-webkit-scrollbar {
+  background-color: #111;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #8025f5;
+  border-radius: 2px;
 }
 
 header {
